--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,7 +11,7 @@
 <div class="login-container">
     <div class="login-box">
         <div class="logo-container">
-            <img src="/images/test.png" alt="AMS 로고" class="logo-main" />
+            <img src="/images/ams_logo_login.png" alt="AMS 로고" class="logo-main" />
             <div class="logo-right">
                 <img src="/images/근태관리시스템2.png" alt="근태관리시스템" class="logo-subtitle" />
                 <img src="/images/full.png" alt="full" class="logo-full" />
